# gemini-flight-recorder

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evaluation.md  failure_modes.md  spec.md  suite.md
evals/: sample-regression.jsonl
examples/adversarial/01-obvious-bad/: README.md  trace.json
examples/adversarial/02-obvious-good/: README.md  trace.json
examples/adversarial/03-near-miss-false-positive/: README.md  trace.json
examples/adversarial/04-near-miss-false-negative/: README.md  trace.json
examples/adversarial/05-harmless-wording/: README.md  trace.json
examples/failing-refund-agent/: README.md  prompt_original.md  prompt_tighter.md  trace.json
examples/grounded-research-agent/: README.md  trace.json
examples/prompt-injection-agent/: README.md  trace.json
examples/repeated-tool-loop/: README.md  trace.json
examples/safe-run/: README.md  trace.json
examples/unsupported-research-agent/: README.md  trace.json
reports/: sample-timeline.html  sample-timeline.md
schemas/: finding.schema.json  regression.schema.json  report.schema.json  trace.schema.json
src/flightrec/: __init__.py  cli.py  detectors.py  importers.py  models.py  promote.py  replay.py  reports.py
tests/: test_adversarial_fixtures.py  test_detectors.py  test_examples.py  test_golden_reports.py  test_importers.py  test_live_gemini_smoke.py  test_reports_replay_promote_cli.py  test_robustness.py
tests/golden/: prompt_injection.json  refund_failure.json  safe_run.json  unsupported_evidence.json
(+6 files in other folders)
