[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-flight-recorder"
version = "0.1.0"
description = "Local replay tool for Gemini app failures: traces to timelines, mock replay, and regression JSONL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
gemini = [
  "google-genai>=1.0",
]

[project.scripts]
flightrec = "flightrec.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live: optional tests that make a live Gemini API call when credentials and optional SDK are present",
]
